	  while it is closing.
	* arch/several:  Change UARTs are enabled for i.MX, LM3S, ez80, and M16C to
	  match how they are enabled for other architectures.
	* configs/ez80f910200kitg:  Convert to use mconf configuration.
	* sched/pause.c:  Implements the POSIX pause() function.
	* ez80: Lots of changes to ez80 configurations and build logic as I
	  struggle to get a clean Windows build (still not working).
	* tools/prebuild.py:  A Python script for Darcy Gong that can automate
	  many build/configuration operations.
	* configs/cloudctrl:   Darcy Gong's CloudController board.  This is a
	  small network relay development board. Based on the Shenzhou IV development
	  board design.  It is based on the STM32F107VC MCU.
	* arch/arm/src/stm32_serial.c and stm32_lowputc.c:  Added optional RS-485
	  direction bit control. From Freddie Chopin.
	* Lots of build files:  ARMv7-M and MIPS32 Make.defs now include a common
	  Toolchain.defs file that can be used to manage toolchains in a more
	  configurable way.  Contributed by Mike Smith
	* configs/stm32f4discovery/winbuild and configs/cloudctrl:  Adapted to use
	  Mike's Toolchain.defs.
	* tools/configure.sh:  Adapted to handle paths and setenv.bat files correctly
	  for native Windows builds.
	* More of build files:  AVR and AVR32 Make.defs now include a common
	  Toolchain.defs file that can be used to manage toolchains in a more
	  configurable way.  Contributed by Mike Smith
	* tools/incdir.sh and incdir.bat: Add -s option to generate system header
	  file paths.
	* nuttx/arch/arm/src/arm/Toolchain.defs: Add support for more ARM toolchains
	  (from Mike Smith).
	* arch/arm/src/stm32/stm32f40xxx_rcc.c:  Enabled FLASH prefetch (from Petteri
	  Aimonen).
	* graphics/nxtk/nxtk_filltrapwindow.c:  Correct an offset problem (from
	  Peterri Aimonen).
	* graphics/nxglib/nxglib_splitline.c:  Fix error in drawing of near horizontal
	  lines (from Peterri Aimonen).